[tool.poetry]
name = "donbug"
version = "0.1.0"
description = ""
authors = ["junhcha <quffl9612@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
alembic = "^1.7.7"
asyncpg = "^0.25.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pyright = "^1.1.238"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.18.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
